<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp"
    android:id="@+id/course_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_item_name"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_item_date"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ItemTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_item_time"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ItemLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_item_location"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>